--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
 }
 
 #navbar img{
-  margin-bottom:  2
+  margin-bottom:  2;
 }
 
 #navbar ul li {
@@ -24,6 +24,14 @@ body{
   color: #958B81;
   text-decoration: none;
   font-size: 18px;
+}
+
+.main-header {
+  background-image: url('https://cdn.vox-cdn.com/thumbor/ufh2N5hs2Jq5GT2xMFrQ_Nodgp8=/0x0:5760x3840/1200x900/filters:focal(2420x1460:3340x2380)/cdn.vox-cdn.com/uploads/chorus_image/image/55306753/shutterstock_274960727.0.jpg');
+  background-size: cover;
+  background-position: 50% 25%;
+  height: 39vh;
+
 }
 
 .image-grid {
