--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ body{
   margin: 0;
 }
 
+  p{
+    font-size: 1em;
+  }
+
 
 #navbar {
   background: #0E0E0E;
@@ -65,10 +69,28 @@ body{
 
 .image-grid {
   display:grid;
+  grid-template: 180px 180px / 20vw 20vw;
+  grid-gap: 2%;
 }
 
 .image-grid div{
   background-image: url(http://lorempixel.com/output/city-q-c-640-480-6.jpg);
-  height: 200px;
-  width: 400px;
+  background-size: cover;
+}
+
+.info-section {
+  margin-top: 3%;
+}
+.info-header{
+  text-align: center;
+}
+.info-grid{
+  display: grid;
+  justify-content: center;
+  grid-template: 300px / 35% 40%;
+  grid-gap: 3.8%;
+}
+
+.info-grid p {
+  line-height: 1.6;
 }
