--- a/main.css
+++ b/main.css
@@ -56,6 +56,19 @@ body{
   padding: 1% 2% 3% 2%;
 }
 
+.search-form{
+  text-align: left;
+}
+
+.Search-form label {
+  color: whitesmoke;
+}
+.search-form input {
+  padding: 5px 10px 5px;
+  width: 80%
+}
+
+
 .search-grid div:nth-child(2) {
   padding: 1% 5% 3% 5%;
 }
